--- a/10-introduction.qmd
+++ b/10-introduction.qmd
@@ -17,7 +17,7 @@ status("polishing", "2022-12-21", section = "A minimal example")  # drafting, po
 - Case Study: A use cases outside of official statistics: seasonal adjustment of business data
  -->
 ```
-This book will teach you how to do seasonal adjustment in R using X13-ARIMA-SEATS.
+This book will teach you how to do seasonal adjustment in R using X-13ARIMA-SEATS.
 The audience will be both R users who want to learn about seasonal adjustment and seasonal adjustment practitioners who are interested in using R.
 The book will be tailored to the practical applications of seasonal adjustment within R.
 
@@ -33,16 +33,16 @@ Why do we want to do this?
 Seasonal data is usually hard to interpret.
 For example, if we want to learn from the US unemployment rate if the economy is moving out of a recession during certain months, we want the labor market data to be free from seasonal effects.
 
-## X13-ARIMA-SEATS {.unnumbered}
+## X-13ARIMA-SEATS {.unnumbered}
 
 Fundamentally, seasonal adjustment decomposes a time series into a **trend**, a **seasonal**, and an **irregular** component and removes the seasonal component from the data.
 There are many ways to perform this decomposition.
 This book focuses on a particular one, X-13ARIMA-SEATS (X-13, for short), the seasonal adjustment software developed by the United States Census Bureau.
-X13 offers an elaborate toolkit to perform the most advanced seasonal adjustment.
+X-13 offers an elaborate toolkit to perform the most advanced seasonal adjustment.
 
 ## R {.unnumbered}
 
-This book will teach you how to use X13 in R through the *seasonal* package, which offers access to all features of X13 with a usually much simpler syntax.
+This book will teach you how to use X-13 in R through the *seasonal* package, which offers access to all features of X-13 with a usually much simpler syntax.
 The required X-13 binaries are provided by the *x13binary* package and automatically included in *seasonal*.
 The next chapter provides a minimal example to get you started in less than five minutes.
 
@@ -60,7 +60,7 @@ It usually starts with a practical problem and shows how to solve it in a cookbo
 Formal derivations are usually avoided.
 Each chapter ends with a case study that discusses a real-life example of the topic.
 
-## History of X13 {.unnumbered}
+## History of X-13 {.unnumbered}
 
 In official statistics, seasonal adjustment has a long tradition.
 The US Census Bureau developed the original X-11 software in the 1960s, Statistics Canada [@dagum80] continued the development afterward.
