--- a/10-introduction.qmd
+++ b/10-introduction.qmd
@@ -35,14 +35,25 @@ For example, if we want to learn from the US unemployment rate if the economy is
 
 ## X-13ARIMA-SEATS {.unnumbered}
 
-Fundamentally, seasonal adjustment decomposes a time series into a **trend**, a **seasonal**, and an **irregular** component and removes the seasonal component from the data.
+Fundamentally, seasonal adjustment decomposes a time series into a **trend**, a **seasonal**, and an **irregular** component.
+Seasonal adjustment is then the act of removing the seasonal estimate from the observed series.
 There are many ways to perform this decomposition.
 This book focuses on a particular one, X-13ARIMA-SEATS (X-13, for short), the seasonal adjustment software developed by the United States Census Bureau.
-X-13 offers an elaborate toolkit to perform the most advanced seasonal adjustment.
+X-13 offers an elaborate toolkit to perform seasonal adjustment.
+The software allows users to control all aspects of the modeling process or alternatively, to use automated methods to make all modeling choices.
+In the text we will try to present material with this in mind.
+Throughout we offer suggestions about when built-in automatic method are sufficient (and sometimes even preferred) and when an analyst can get the most \`\`bang for the buck'' to control modeling options themselves.
 
 ## R {.unnumbered}
 
 This book will teach you how to use X-13 in R through the *seasonal* package, which offers access to all features of X-13 with a usually much simpler syntax.
+It should be noted that the seasonal package is not a re-coding of the X-13 software.
+Instead it is a translation from R to the X-13 software.
+This translation is done under the hood and practitioners need not concern themselves with this inner working of the package.
+However, we make this point such that users understand that conceptually anything that can be done in the native X-13ARIMA-SEATS software, either from the command line or HTML version, can be done in the seasonal R package.
+Also this means if additional clarification or information about seasonal adjustment is desired, the X-13 manual or research papers can be consulted.
+Any example or methods found via the X-13 documentation can be easily translated to the R seasonal package.
+In fact, all examples from the X-13 manual can be seen run in the R seasonal package at http://www.seasonal.website/examples.html.
 The required X-13 binaries are provided by the *x13binary* package and automatically included in *seasonal*.
 The next chapter provides a minimal example to get you started in less than five minutes.
 
