--- a/22-transform.qmd
+++ b/22-transform.qmd
@@ -20,28 +20,39 @@ status("drafting", "2022-12-21", section = "Transform")  # drafting, polishing, 
 -   Case Study idea: Decide between log vs non-log transformation
  -->
 ```
-
 One of the first choices to make when modeling a time series is whether or not it needs to be transformed prior to modeling.
 There are two types of transformation types that typically occur within X13.
 The first is a prior modification.
 A prior modification scales each observation for known fixed effects.
 These effects can be well known and established such as length of a month/quarter and leap-year or more subjective such as a modification for a workers strike.
 We will see how this comes into the regARIMA model in the next chapter.
-We can think of prior modification factors of events or corrections made to your data that are fixed throughout the adjustment process.
+We can think of prior modification factors as events or corrections made to your data that are fixed throughout the adjustment process.
 Additionally, these prior modification factors can be permanent (default) or temporary.
-The difference between permanent and temporary is wheither or not the effect is included back in the final seasonally adjusted series or not; permanent factors are excluded from the final seasonal adjustment while temporary are removed while calculating seasonal factors but then added back to the seasonally adjusted series.
+The difference between permanent and temporary is wheither or not the effect is included back in the final seasonally adjusted series or not; permanent factors are excluded from the final seasonal adjustment while temporary are removed while calculating seasonal factors but then added back to the seasonally adjusted series. 
+
 The second type is a nonlinear transformation applied to the observations.
-This is typically a choice between logarithmic transform and no transformation but for modeling can be any power of the Box-Cox transformation CITE.
+This is typically a choice between logarithmic transform and no transformation but for modeling can be any power of the Box-Cox transformation. 
+
+```{r}
+m_none <- seas(AirPassengers, transform.function = 'none')
+m_log  <- seas(AirPassengers, transform.function = 'log')
+```
 
 ## Multiplicative or additive adjustment?
 
-X-13A-S has a built in statistical test to decide between log and no transformation.
+We seek the decompose our observed series $Y_t$ into trend, seasonal and irregular components.
+$$Y_t = T_t + S_t + I_t.$$
+This decomposition is referred to as an *additive* decomposition.
+If a log transform is used for each component we use a *multiplicative* seasonal decomposition.
+$$Y_t = T_t \cdot S_t \cdot I_t$$
+
+X-13 has a built in statistical test to decide between log and no transformation.
 This is done with an information criteria based statistical test.
-The choice is made by comparing the AICC value CITE of an Airline model fit, or user specified ARIMA model, to the log transformed series and the original series.
+The choice is made by comparing the AICC value of an Airline model fit, or user specified ARIMA model, to the log transformed series and the original series.
 For all practical purposes this is an effective choice and can be left to the program to decide.
 Note, if your series has negative values it can not be log transformed and no transform is automatically selected by X-13 when automatic transformation is asked for.
-Other restrictions on the allowed transformations exist and can be found in CITE but these situations are rare.
-We can see the results of the transformation tests by looking at specific inputs to the UDG file.
+Other restrictions on the allowed transformations exist but these situations are rare.
+We can look at the results of the transformation tests by looking at specific inputs to the UDG file.
 
 ```{r}
 library(seasonal)
@@ -51,15 +62,18 @@ udg(m, c("aictest.trans.aicc.nolog", "aictest.trans.aicc.log"))
 
 We see the AICC for log transformation is lower and hence selected.
 The summary of the seasonal object `summary(m)` tells us this with `Transform: log` displayed.
-The automatically selected transformation can also be found in many other places such as the HTML output with `out(m)` or the udg with agruement name *aictrans* such as `udg(m, "aictrans")`.
+The automatically selected transformation can also be found in many other places such as the HTML output with `out(m)` or the udg with argument name *aictrans* such as `udg(m, "aictrans")`.
 
 The choice between log and none changes the type of seasonal decomposition that will occur and hence your interpretation of the seasonal factors.
-With no transformation, X13 will do an additive seasonal adjustment $$X_t = T_t + S_t + I_t.$$ If a long transformation is selected, X13 will do a multiplicative adjustment $$X_t = T_t \cdot S_t \cdot I_t.$$ This is major difference here is the way seasonal factors are interpreted and applied to the observed data to remove seasonality.
-For additive models the seasonal factor is subtracted from the original $X_t - S_t$.
+With no transformation, X13 will do an additive seasonal adjustment $$Y_t = T_t + S_t + I_t.$$ 
+If a long transformation is selected, X13 will do a multiplicative adjustment $$Y_t = T_t \cdot S_t \cdot I_t.$$ 
+One major difference here is the way seasonal factors are interpreted and applied to the observed data to remove seasonality.
+For additive models the seasonal factor is subtracted from the original $$A_t = Y_t - S_t.$$
 For example, an observed value of 100 with seasonal factor of 3.2 would result in a seasonally adjusted value of $100 - 3.2 = 96.8$.
-For multiplicative models the observed data is divided by the seasonal factor $\frac{X_t}{S_t}$.
+For multiplicative models the observed data is divided by the seasonal factor $$A_t = \frac{Y_t}{S_t}.$$
 For example, an observed value of 100 with seasonal factor of 1.08 would result in a seasonally adjusted value of $100 / 1.08 = 92.59259$.
 Hence for multiplicative models values of $S_t>1$, decrease the observed value and $S_t < 1$ increase it.
+Keep this in mind with the when viewing seasonal factors such as in the function `monthplot(m)`.
 
 ## Transform options
 
@@ -67,32 +81,39 @@ The `transform` spec controls these options.
 Some primary options within this spec are
 
 | Spec option  | Use                                            | Example values       | default     |
-|---------------|---------------------------|---------------|---------------|
+|----------------|------------------------|----------------|----------------|
 | function     | specify transform                              | none, log, auto      | none        |
 | data or file | specify prior adjustment factor                | (1.2, 1.1, ..., .99) | (1,1,...,1) |
 | aicdiff      | adjust tolerance of AIC test for log transform | 0.0 3.0 -4.5         | -2.0        |
 
 Case Study: AirPassengers series
 
-We have seen the AirPassengers already it displays all classic signs of requiring a logarithmic transform such as heteroskadasticity. 
+We have seen the AirPassengers already it displays all classic signs of requiring a logarithmic transform such as heteroskadasticity.
 Lets verify that the automatic transformation identifies this.
+
 ```{r}
 library(seasonal)
 m <- seas(AirPassengers)
 transformfunction(m)
 ```
-This is also a good place to get our first look at some of the seasonal factors for an additive vs multiplicative model. 
-MAYBE THIS ISN'T NEEDED BUT SHOULD IT GO SOMEWHERE?
+
+This is also a good place to get our first look at some of the seasonal factors for an additive vs multiplicative model.
 
 ```{r}
 m <- seas(AirPassengers, 
+          transform.function = "log",
           x11.save = "d10")
-series(m, "d10")
+series(m, "d10") |> head()
+monthplot(m)
+```
 
+
+```{r}
 m <- seas(AirPassengers, 
           transform.function = "none", 
           x11.save = "d10")
-series(m, "d10")
+series(m, "d10") |> head()
+monthplot(m)
 ```
 
 ## Case Study 2: More difficult decision
